修改了一些

--- a/article.html
+++ b/article.html
@@ -87,17 +87,17 @@
           <p class="tagnameinfo">最近文章</p>
           <ul class="artlist">
           	<li class="item_title">
-            	<a class="coverImg" href="article_context.html">
+            	<a class="coverImg"  href="article_context.html">
                 	<img src="img/article/1.png" alt="图片">
-                </a>
-                <ul>
-                	<li class="tit"><a>那些高级的人生里，都懂得留白</a></li>
-                    <li class="des">
-                    	<i>心灵之窗网</i>
-                        <i>阅读169</i>
-                    </li>
-                </ul>
-                <br class="clearfix">
+              </a>
+              <ul>
+                <li class="tit"><a>那些高级的人生里，都懂得留白</a></li>
+                  <li class="des">
+                    <i>心灵之窗网</i>
+                      <i>阅读169</i>
+                  </li>
+              </ul>
+              <br class="clearfix">
             </li>
             <li class="item_title">
             	<a class="coverImg">
@@ -396,7 +396,7 @@
             <li><a class="text-muted" href="#">亲亲宝贝网</a></li>
             <li><a class="text-muted" href="#">心理测试网</a></li>
             <li><a class="text-muted" href="#">爸妈在线心理网</a></li>
-            <li><a class="text-muted" href="#">江西自考网</a></li>
+            <li><a class="text-muted" href="#">辽宁自考网</a></li>
           </ul>
         </div>
       </div>
