--- a/article_context.html
+++ b/article_context.html
@@ -137,7 +137,7 @@
       </div>
       <div class="col-3 wr">
         <br>
-		<p class="h-tit-r"><a href="#">南昌心理专家</a></p>
+		<p class="h-tit-r"><a href="#">大连心理专家</a></p>
 		<ul id="citydr-list">
 			<li>
 				<a href="#">
@@ -145,7 +145,7 @@
 				<em>
 					<b>朱红宇</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -156,9 +156,9 @@
 				<a href="#">
 				<img src="img/人物头像/10.jpg" alt="">
 				<em>
-					<b>于修彬</b>
+					<b>彭于晏</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -171,7 +171,7 @@
 				<em>
 					<b>池天宇</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -184,7 +184,7 @@
 				<em>
 					<b>董华</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -197,7 +197,7 @@
 				<em>
 					<b>于桂英</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -210,7 +210,7 @@
 				<em>
 					<b>朱红宇</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -278,7 +278,7 @@
             <li><a class="text-muted" href="#">亲亲宝贝网</a></li>
             <li><a class="text-muted" href="#">心理测试网</a></li>
             <li><a class="text-muted" href="#">爸妈在线心理网</a></li>
-            <li><a class="text-muted" href="#">江西自考网</a></li>
+            <li><a class="text-muted" href="#">辽宁自考网</a></li>
           </ul>
         </div>
       </div>
