--- a/psy_test.html
+++ b/psy_test.html
@@ -133,7 +133,7 @@
       </div>
       <div class="col-3 wr">
         <br>
-		<p class="h-tit-r"><a href="#">南昌心理专家</a></p>
+		<p class="h-tit-r"><a href="#">大连心理专家</a></p>
 		<ul id="citydr-list">
 			<li>
 				<a href="#">
@@ -141,7 +141,7 @@
 				<em>
 					<b>朱红宇</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -152,9 +152,9 @@
 				<a href="#">
 				<img src="img/人物头像/10.jpg" alt="">
 				<em>
-					<b>于修彬</b>
+					<b>陈江辉</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -167,7 +167,7 @@
 				<em>
 					<b>池天宇</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -180,7 +180,7 @@
 				<em>
 					<b>董华</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -193,7 +193,7 @@
 				<em>
 					<b>于桂英</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -206,7 +206,7 @@
 				<em>
 					<b>朱红宇</b>
 					<br>
-					南昌市&nbsp;&nbsp;青山湖区
+					大连市&nbsp;&nbsp;中山区
 					<br>
 					擅长：抑郁症，孩子逆反
 				</em>
@@ -274,7 +274,7 @@
             <li><a class="text-muted" href="#">亲亲宝贝网</a></li>
             <li><a class="text-muted" href="#">心理测试网</a></li>
             <li><a class="text-muted" href="#">爸妈在线心理网</a></li>
-            <li><a class="text-muted" href="#">江西自考网</a></li>
+            <li><a class="text-muted" href="#">辽宁自考网</a></li>
           </ul>
         </div>
       </div>
