--- a/register_way2.html
+++ b/register_way2.html
@@ -443,7 +443,7 @@
             <li><a class="text-muted" href="#">亲亲宝贝网</a></li>
             <li><a class="text-muted" href="#">心理测试网</a></li>
             <li><a class="text-muted" href="#">爸妈在线心理网</a></li>
-            <li><a class="text-muted" href="#">江西自考网</a></li>
+            <li><a class="text-muted" href="#">辽宁自考网</a></li>
           </ul>
         </div>
       </div>
